# MCP_AI_Summary_demo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_local.py
src/: __init__.py  config.py  data_source.py  model.py  ollama_client.py  presenter.py  prompts.py  security.py  server.py  view.py
tests/: test_mvp.py
