[project]
name = "mcp-ai-summary-demo"
version = "1.0.0"
description = "MCP Server 範例 - 展示如何從資料庫/API取得資料並透過Ollama生成AI摘要"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
mcp-summary = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
